y.output
   0  $accept : programa $end

   1  programa : nombre_programa sentencias_declarativas bloque_ejecutable
   2           | bloque_ejecutable
   3           | declaracion_clara sentencias_declarativas bloque_ejecutable

   4  declaracion_clara : declaracion_variables
   5                    | declaracion_funcion
   6                    | declaracion_clase
   7                    | declaracion_typedef

   8  nombre_programa : ID

   9  bloque_ejecutable : BEGIN lista_sentencias END
  10                    | BEGIN END
  11                    | BEGIN lista_sentencias
  12                    | BEGIN error END
  13                    | END
  14                    | error END

  15  sentencias_declarativas : sentencia_declarativa sentencias_declarativas
  16                          |

  17  sentencia_declarativa : declaracion_variables
  18                        | declaracion_objetos
  19                        | declaracion_funcion
  20                        | declaracion_clase
  21                        | declaracion_typedef
  22                        | asignacion ';'
  23                        | sentencia_if
  24                        | sentencia_repeat_while
  25                        | sentencia_pout
  26                        | sentencia_ret

  27  declaracion_variables : tipo lista_variables ';'
  28                        | tipo error ';'

  29  declaracion_objetos : ID lista_variables ';'

  30  tipo : ULONGINT
  31       | DOUBLEF

  32  tipo_declarado : tipo
  33                 | ID

  34  lista_variables : ID ',' lista_variables
  35                  | ID
  36                  | ID lista_variables

  37  encabezado_funcion : tipo FUNCTION ID
  38                     | tipo FUNCTION

  39  declaracion_funcion : encabezado_funcion '(' lista_parametros_formales ')' sentencias_declarativas cierre_funcion

  40  cierre_funcion : BEGIN lista_sentencias END ';'
  41                 | BEGIN END ';'
  42                 | BEGIN lista_sentencias END
  43                 | BEGIN error END ';'
  44                 | error END ';'

  45  lista_parametros_formales : parametro_formal ',' lista_parametros_formales
  46                            | parametro_formal

  47  parametro_formal : tipo ID
  48                   | ID ID
  49                   | tipo
  50                   | ID

  51  encabezado_clase : CLASS ID

  52  declaracion_clase : encabezado_clase BEGIN cuerpo_clase END ';'
  53                    | encabezado_clase BEGIN cuerpo_clase END

  54  cuerpo_clase : miembro_clase cuerpo_clase
  55               |

  56  miembro_clase : declaracion_atributo
  57                | declaracion_metodo
  58                | sentencia_extends

  59  declaracion_atributo : tipo_declarado lista_variables ';'

  60  encabezado_metodo : tipo_declarado ID

  61  declaracion_metodo : encabezado_metodo '(' lista_parametros_formales ')' BEGIN lista_sentencias END ';'

  62  sentencia_extends : EXTENDS lista_clases_heredadas ';'
  63                    | EXTENDS ';'
  64                    | EXTENDS error ';'

  65  lista_clases_heredadas : ID ',' lista_clases_heredadas
  66                         | ID

  67  declaracion_typedef : TYPEDEF ID '=' '[' lista_valores_enumerado ']' ';'
  68                      | TYPEDEF ID '=' '[' ']' ';'

  69  lista_valores_enumerado : constante ',' lista_valores_enumerado
  70                          | constante

  71  lista_sentencias : sentencia lista_sentencias
  72                   | sentencia

  73  sentencia : asignacion ';'
  74            | asignacion
  75            | sentencia_if
  76            | sentencia_repeat_while
  77            | sentencia_pout
  78            | sentencia_ret
  79            | error ';'

  80  bloque_sentencias : sentencia
  81                    | BEGIN lista_sentencias END

  82  asignacion : ID ASIG expresion
  83             | referencia_atributo ASIG expresion
  84             | ID ASIG error

  85  sentencia_if : IF '(' condicion ')' bloque_sentencias END_IF ';'
  86               | IF '(' condicion ')' bloque_sentencias ELSE bloque_sentencias END_IF ';'
  87               | IF '(' condicion ')' bloque_sentencias END_IF
  88               | IF '(' condicion ')' bloque_sentencias ELSE bloque_sentencias END_IF
  89               | IF '(' condicion ')' bloque_sentencias error
  90               | IF '(' condicion ')' bloque_sentencias ELSE bloque_sentencias error
  91               | IF condicion ')' bloque_sentencias END_IF ';'
  92               | IF '(' condicion error bloque_sentencias END_IF ';'
  93               | IF '(' error ')' bloque_sentencias END_IF ';'

  94  condicion : expresion comparador expresion

  95  comparador : MAYOR_IGUAL
  96             | MENOR_IGUAL
  97             | IGUAL_IGUAL
  98             | DISTINTO
  99             | '>'
 100             | '<'

 101  sentencia_repeat_while : REPEAT bloque_sentencias WHILE '(' condicion ')' ';'
 102                         | REPEAT bloque_sentencias WHILE '(' condicion ')'
 103                         | REPEAT WHILE '(' condicion ')' ';'
 104                         | REPEAT bloque_sentencias error ';'
 105                         | REPEAT bloque_sentencias WHILE condicion ')' ';'
 106                         | REPEAT bloque_sentencias WHILE '(' condicion ';'

 107  sentencia_pout : POUT '(' CADENA ')' ';'
 108                 | POUT '(' expresion ')' ';'
 109                 | POUT '(' ')' ';'
 110                 | POUT '(' CADENA ')'
 111                 | POUT '(' expresion ')'

 112  sentencia_ret : RET '(' expresion ')' ';'
 113                | RET '(' expresion ')'

 114  expresion : termino '+' expresion
 115            | termino '-' expresion
 116            | termino '+' error
 117            | termino '-' error
 118            | termino CTE
 119            | termino

 120  termino : factor '*' termino
 121          | factor '/' termino
 122          | factor '*' error
 123          | factor '/' error
 124          | factor

 125  factor : ID
 126         | constante
 127         | invocacion_funcion
 128         | referencia_atributo
 129         | asignacion_en_expresion
 130         | conversion

 131  constante : CTE
 132            | '-' CTE

 133  asignacion_en_expresion : ID '=' '(' expresion ')'
 134                          | ID ASIG '(' expresion ')'

 135  conversion : TODF '(' expresion ')'

 136  invocacion_funcion : ID '(' lista_parametros_reales ')' '[' lista_orden_evaluacion ']'
 137                     | ID '(' lista_parametros_reales ')' '[' ']'
 138                     | ID '(' lista_parametros_reales ')'

 139  lista_parametros_reales : parametro_real ',' lista_parametros_reales
 140                          | parametro_real

 141  parametro_real : ID '=' expresion
 142                 | expresion

 143  lista_orden_evaluacion : CTE ',' lista_orden_evaluacion
 144                         | CTE

 145  referencia_atributo : ID '.' ID
 146                      | ID '.' ID '.' ID
 147                      | ID '.' ID '(' lista_parametros_reales ')'

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	BEGIN  shift 3
	END  shift 4
	CLASS  shift 5
	TYPEDEF  shift 6
	ULONGINT  shift 7
	DOUBLEF  shift 8
	.  error

	programa  goto 9
	nombre_programa  goto 10
	bloque_ejecutable  goto 11
	declaracion_clara  goto 12
	declaracion_variables  goto 13
	declaracion_funcion  goto 14
	declaracion_clase  goto 15
	declaracion_typedef  goto 16
	tipo  goto 17
	encabezado_funcion  goto 18
	encabezado_clase  goto 19


state 1
	bloque_ejecutable : error . END  (14)

	END  shift 20
	.  error


state 2
	nombre_programa : ID .  (8)

	.  reduce 8


state 3
	bloque_ejecutable : BEGIN . lista_sentencias END  (9)
	bloque_ejecutable : BEGIN . END  (10)
	bloque_ejecutable : BEGIN . lista_sentencias  (11)
	bloque_ejecutable : BEGIN . error END  (12)

	error  shift 21
	ID  shift 22
	IF  shift 23
	END  shift 24
	POUT  shift 25
	RET  shift 26
	REPEAT  shift 27
	.  error

	lista_sentencias  goto 28
	asignacion  goto 29
	sentencia_if  goto 30
	sentencia_repeat_while  goto 31
	sentencia_pout  goto 32
	sentencia_ret  goto 33
	sentencia  goto 34
	referencia_atributo  goto 35


state 4
	bloque_ejecutable : END .  (13)

	.  reduce 13


state 5
	encabezado_clase : CLASS . ID  (51)

	ID  shift 36
	.  error


state 6
	declaracion_typedef : TYPEDEF . ID '=' '[' lista_valores_enumerado ']' ';'  (67)
	declaracion_typedef : TYPEDEF . ID '=' '[' ']' ';'  (68)

	ID  shift 37
	.  error


state 7
	tipo : ULONGINT .  (30)

	.  reduce 30


state 8
	tipo : DOUBLEF .  (31)

	.  reduce 31


state 9
	$accept : programa . $end  (0)

	$end  accept


state 10
	programa : nombre_programa . sentencias_declarativas bloque_ejecutable  (1)
	sentencias_declarativas : .  (16)

	ID  shift 38
	IF  shift 23
	POUT  shift 25
	RET  shift 26
	CLASS  shift 5
	REPEAT  shift 27
	TYPEDEF  shift 6
	ULONGINT  shift 7
	DOUBLEF  shift 8
	error  reduce 16
	BEGIN  reduce 16
	END  reduce 16

	sentencias_declarativas  goto 39
	declaracion_variables  goto 40
	declaracion_funcion  goto 41
	declaracion_clase  goto 42
	declaracion_typedef  goto 43
	sentencia_declarativa  goto 44
	declaracion_objetos  goto 45
	asignacion  goto 46
	sentencia_if  goto 47
	sentencia_repeat_while  goto 48
	sentencia_pout  goto 49
	sentencia_ret  goto 50
	tipo  goto 17
	encabezado_funcion  goto 18
	encabezado_clase  goto 19
	referencia_atributo  goto 35


state 11
	programa : bloque_ejecutable .  (2)

	.  reduce 2


state 12
	programa : declaracion_clara . sentencias_declarativas bloque_ejecutable  (3)
	sentencias_declarativas : .  (16)

	ID  shift 38
	IF  shift 23
	POUT  shift 25
	RET  shift 26
	CLASS  shift 5
	REPEAT  shift 27
	TYPEDEF  shift 6
	ULONGINT  shift 7
	DOUBLEF  shift 8
	error  reduce 16
	BEGIN  reduce 16
	END  reduce 16

	sentencias_declarativas  goto 51
	declaracion_variables  goto 40
	declaracion_funcion  goto 41
	declaracion_clase  goto 42
	declaracion_typedef  goto 43
	sentencia_declarativa  goto 44
	declaracion_objetos  goto 45
	asignacion  goto 46
	sentencia_if  goto 47
	sentencia_repeat_while  goto 48
	sentencia_pout  goto 49
	sentencia_ret  goto 50
	tipo  goto 17
	encabezado_funcion  goto 18
	encabezado_clase  goto 19
	referencia_atributo  goto 35


state 13
	declaracion_clara : declaracion_variables .  (4)

	.  reduce 4


state 14
	declaracion_clara : declaracion_funcion .  (5)

	.  reduce 5


state 15
	declaracion_clara : declaracion_clase .  (6)

	.  reduce 6


state 16
	declaracion_clara : declaracion_typedef .  (7)

	.  reduce 7


state 17
	declaracion_variables : tipo . lista_variables ';'  (27)
	declaracion_variables : tipo . error ';'  (28)
	encabezado_funcion : tipo . FUNCTION ID  (37)
	encabezado_funcion : tipo . FUNCTION  (38)

	error  shift 52
	ID  shift 53
	FUNCTION  shift 54
	.  error

	lista_variables  goto 55


state 18
	declaracion_funcion : encabezado_funcion . '(' lista_parametros_formales ')' sentencias_declarativas cierre_funcion  (39)

	'('  shift 56
	.  error


state 19
	declaracion_clase : encabezado_clase . BEGIN cuerpo_clase END ';'  (52)
	declaracion_clase : encabezado_clase . BEGIN cuerpo_clase END  (53)

	BEGIN  shift 57
	.  error


state 20
	bloque_ejecutable : error END .  (14)

	.  reduce 14


state 21
	bloque_ejecutable : BEGIN error . END  (12)
	sentencia : error . ';'  (79)

	END  shift 58
	';'  shift 59
	.  error


state 22
	asignacion : ID . ASIG expresion  (82)
	asignacion : ID . ASIG error  (84)
	referencia_atributo : ID . '.' ID  (145)
	referencia_atributo : ID . '.' ID '.' ID  (146)
	referencia_atributo : ID . '.' ID '(' lista_parametros_reales ')'  (147)

	ASIG  shift 60
	'.'  shift 61
	.  error


state 23
	sentencia_if : IF . '(' condicion ')' bloque_sentencias END_IF ';'  (85)
	sentencia_if : IF . '(' condicion ')' bloque_sentencias ELSE bloque_sentencias END_IF ';'  (86)
	sentencia_if : IF . '(' condicion ')' bloque_sentencias END_IF  (87)
	sentencia_if : IF . '(' condicion ')' bloque_sentencias ELSE bloque_sentencias END_IF  (88)
	sentencia_if : IF . '(' condicion ')' bloque_sentencias error  (89)
	sentencia_if : IF . '(' condicion ')' bloque_sentencias ELSE bloque_sentencias error  (90)
	sentencia_if : IF . condicion ')' bloque_sentencias END_IF ';'  (91)
	sentencia_if : IF . '(' condicion error bloque_sentencias END_IF ';'  (92)
	sentencia_if : IF . '(' error ')' bloque_sentencias END_IF ';'  (93)

	ID  shift 62
	CTE  shift 63
	TODF  shift 64
	'('  shift 65
	'-'  shift 66
	.  error

	constante  goto 67
	expresion  goto 68
	referencia_atributo  goto 69
	condicion  goto 70
	termino  goto 71
	factor  goto 72
	invocacion_funcion  goto 73
	asignacion_en_expresion  goto 74
	conversion  goto 75


state 24
	bloque_ejecutable : BEGIN END .  (10)

	.  reduce 10


state 25
	sentencia_pout : POUT . '(' CADENA ')' ';'  (107)
	sentencia_pout : POUT . '(' expresion ')' ';'  (108)
	sentencia_pout : POUT . '(' ')' ';'  (109)
	sentencia_pout : POUT . '(' CADENA ')'  (110)
	sentencia_pout : POUT . '(' expresion ')'  (111)

	'('  shift 76
	.  error


state 26
	sentencia_ret : RET . '(' expresion ')' ';'  (112)
	sentencia_ret : RET . '(' expresion ')'  (113)

	'('  shift 77
	.  error


state 27
	sentencia_repeat_while : REPEAT . bloque_sentencias WHILE '(' condicion ')' ';'  (101)
	sentencia_repeat_while : REPEAT . bloque_sentencias WHILE '(' condicion ')'  (102)
	sentencia_repeat_while : REPEAT . WHILE '(' condicion ')' ';'  (103)
	sentencia_repeat_while : REPEAT . bloque_sentencias error ';'  (104)
	sentencia_repeat_while : REPEAT . bloque_sentencias WHILE condicion ')' ';'  (105)
	sentencia_repeat_while : REPEAT . bloque_sentencias WHILE '(' condicion ';'  (106)

	error  shift 78
	ID  shift 22
	IF  shift 23
	BEGIN  shift 79
	POUT  shift 25
	RET  shift 26
	REPEAT  shift 27
	WHILE  shift 80
	.  error

	asignacion  goto 29
	sentencia_if  goto 30
	sentencia_repeat_while  goto 31
	sentencia_pout  goto 32
	sentencia_ret  goto 33
	sentencia  goto 81
	bloque_sentencias  goto 82
	referencia_atributo  goto 35


state 28
	bloque_ejecutable : BEGIN lista_sentencias . END  (9)
	bloque_ejecutable : BEGIN lista_sentencias .  (11)

	END  shift 83
	$end  reduce 11


state 29
	sentencia : asignacion . ';'  (73)
	sentencia : asignacion .  (74)

	';'  shift 84
	$end  reduce 74
	error  reduce 74
	ID  reduce 74
	IF  reduce 74
	ELSE  reduce 74
	END_IF  reduce 74
	END  reduce 74
	POUT  reduce 74
	RET  reduce 74
	REPEAT  reduce 74
	WHILE  reduce 74


state 30
	sentencia : sentencia_if .  (75)

	.  reduce 75


state 31
	sentencia : sentencia_repeat_while .  (76)

	.  reduce 76


state 32
	sentencia : sentencia_pout .  (77)

	.  reduce 77


state 33
	sentencia : sentencia_ret .  (78)

	.  reduce 78


state 34
	lista_sentencias : sentencia . lista_sentencias  (71)
	lista_sentencias : sentencia .  (72)

	error  shift 78
	ID  shift 22
	IF  shift 23
	POUT  shift 25
	RET  shift 26
	REPEAT  shift 27
	$end  reduce 72
	END  reduce 72

	lista_sentencias  goto 85
	asignacion  goto 29
	sentencia_if  goto 30
	sentencia_repeat_while  goto 31
	sentencia_pout  goto 32
	sentencia_ret  goto 33
	sentencia  goto 34
	referencia_atributo  goto 35


state 35
	asignacion : referencia_atributo . ASIG expresion  (83)

	ASIG  shift 86
	.  error


state 36
	encabezado_clase : CLASS ID .  (51)

	.  reduce 51


state 37
	declaracion_typedef : TYPEDEF ID . '=' '[' lista_valores_enumerado ']' ';'  (67)
	declaracion_typedef : TYPEDEF ID . '=' '[' ']' ';'  (68)

	'='  shift 87
	.  error


state 38
	declaracion_objetos : ID . lista_variables ';'  (29)
	asignacion : ID . ASIG expresion  (82)
	asignacion : ID . ASIG error  (84)
	referencia_atributo : ID . '.' ID  (145)
	referencia_atributo : ID . '.' ID '.' ID  (146)
	referencia_atributo : ID . '.' ID '(' lista_parametros_reales ')'  (147)

	ID  shift 53
	ASIG  shift 60
	'.'  shift 61
	.  error

	lista_variables  goto 88


state 39
	programa : nombre_programa sentencias_declarativas . bloque_ejecutable  (1)

	error  shift 1
	BEGIN  shift 3
	END  shift 4
	.  error

	bloque_ejecutable  goto 89


state 40
	sentencia_declarativa : declaracion_variables .  (17)

	.  reduce 17


state 41
	sentencia_declarativa : declaracion_funcion .  (19)

	.  reduce 19


state 42
	sentencia_declarativa : declaracion_clase .  (20)

	.  reduce 20


state 43
	sentencia_declarativa : declaracion_typedef .  (21)

	.  reduce 21


state 44
	sentencias_declarativas : sentencia_declarativa . sentencias_declarativas  (15)
	sentencias_declarativas : .  (16)

	ID  shift 38
	IF  shift 23
	POUT  shift 25
	RET  shift 26
	CLASS  shift 5
	REPEAT  shift 27
	TYPEDEF  shift 6
	ULONGINT  shift 7
	DOUBLEF  shift 8
	error  reduce 16
	BEGIN  reduce 16
	END  reduce 16

	sentencias_declarativas  goto 90
	declaracion_variables  goto 40
	declaracion_funcion  goto 41
	declaracion_clase  goto 42
	declaracion_typedef  goto 43
	sentencia_declarativa  goto 44
	declaracion_objetos  goto 45
	asignacion  goto 46
	sentencia_if  goto 47
	sentencia_repeat_while  goto 48
	sentencia_pout  goto 49
	sentencia_ret  goto 50
	tipo  goto 17
	encabezado_funcion  goto 18
	encabezado_clase  goto 19
	referencia_atributo  goto 35


state 45
	sentencia_declarativa : declaracion_objetos .  (18)

	.  reduce 18


state 46
	sentencia_declarativa : asignacion . ';'  (22)

	';'  shift 91
	.  error


state 47
	sentencia_declarativa : sentencia_if .  (23)

	.  reduce 23


state 48
	sentencia_declarativa : sentencia_repeat_while .  (24)

	.  reduce 24


state 49
	sentencia_declarativa : sentencia_pout .  (25)

	.  reduce 25


state 50
	sentencia_declarativa : sentencia_ret .  (26)

	.  reduce 26


state 51
	programa : declaracion_clara sentencias_declarativas . bloque_ejecutable  (3)

	error  shift 1
	BEGIN  shift 3
	END  shift 4
	.  error

	bloque_ejecutable  goto 92


state 52
	declaracion_variables : tipo error . ';'  (28)

	';'  shift 93
	.  error


state 53
	lista_variables : ID . ',' lista_variables  (34)
	lista_variables : ID .  (35)
	lista_variables : ID . lista_variables  (36)

	ID  shift 53
	','  shift 94
	';'  reduce 35

	lista_variables  goto 95


state 54
	encabezado_funcion : tipo FUNCTION . ID  (37)
	encabezado_funcion : tipo FUNCTION .  (38)

	ID  shift 96
	'('  reduce 38


state 55
	declaracion_variables : tipo lista_variables . ';'  (27)

	';'  shift 97
	.  error


state 56
	declaracion_funcion : encabezado_funcion '(' . lista_parametros_formales ')' sentencias_declarativas cierre_funcion  (39)

	ID  shift 98
	ULONGINT  shift 7
	DOUBLEF  shift 8
	.  error

	tipo  goto 99
	lista_parametros_formales  goto 100
	parametro_formal  goto 101


state 57
	declaracion_clase : encabezado_clase BEGIN . cuerpo_clase END ';'  (52)
	declaracion_clase : encabezado_clase BEGIN . cuerpo_clase END  (53)
	cuerpo_clase : .  (55)

	ID  shift 102
	EXTENDS  shift 103
	ULONGINT  shift 7
	DOUBLEF  shift 8
	END  reduce 55

	tipo  goto 104
	tipo_declarado  goto 105
	cuerpo_clase  goto 106
	miembro_clase  goto 107
	declaracion_atributo  goto 108
	declaracion_metodo  goto 109
	sentencia_extends  goto 110
	encabezado_metodo  goto 111


state 58
	bloque_ejecutable : BEGIN error END .  (12)

	.  reduce 12


state 59
	sentencia : error ';' .  (79)

	.  reduce 79


state 60
	asignacion : ID ASIG . expresion  (82)
	asignacion : ID ASIG . error  (84)

	error  shift 112
	ID  shift 62
	CTE  shift 63
	TODF  shift 64
	'-'  shift 66
	.  error

	constante  goto 67
	expresion  goto 113
	referencia_atributo  goto 69
	termino  goto 71
	factor  goto 72
	invocacion_funcion  goto 73
	asignacion_en_expresion  goto 74
	conversion  goto 75


state 61
	referencia_atributo : ID '.' . ID  (145)
	referencia_atributo : ID '.' . ID '.' ID  (146)
	referencia_atributo : ID '.' . ID '(' lista_parametros_reales ')'  (147)

	ID  shift 114
	.  error


state 62
	factor : ID .  (125)
	asignacion_en_expresion : ID . '=' '(' expresion ')'  (133)
	asignacion_en_expresion : ID . ASIG '(' expresion ')'  (134)
	invocacion_funcion : ID . '(' lista_parametros_reales ')' '[' lista_orden_evaluacion ']'  (136)
	invocacion_funcion : ID . '(' lista_parametros_reales ')' '[' ']'  (137)
	invocacion_funcion : ID . '(' lista_parametros_reales ')'  (138)
	referencia_atributo : ID . '.' ID  (145)
	referencia_atributo : ID . '.' ID '.' ID  (146)
	referencia_atributo : ID . '.' ID '(' lista_parametros_reales ')'  (147)

	ASIG  shift 115
	'('  shift 116
	'='  shift 117
	'.'  shift 61
	$end  reduce 125
	error  reduce 125
	ID  reduce 125
	CTE  reduce 125
	MAYOR_IGUAL  reduce 125
	MENOR_IGUAL  reduce 125
	IGUAL_IGUAL  reduce 125
	DISTINTO  reduce 125
	IF  reduce 125
	ELSE  reduce 125
	END_IF  reduce 125
	END  reduce 125
	POUT  reduce 125
	RET  reduce 125
	REPEAT  reduce 125
	WHILE  reduce 125
	';'  reduce 125
	','  reduce 125
	')'  reduce 125
	'>'  reduce 125
	'<'  reduce 125
	'+'  reduce 125
	'-'  reduce 125
	'*'  reduce 125
	'/'  reduce 125


state 63
	constante : CTE .  (131)

	.  reduce 131


state 64
	conversion : TODF . '(' expresion ')'  (135)

	'('  shift 118
	.  error


state 65
	sentencia_if : IF '(' . condicion ')' bloque_sentencias END_IF ';'  (85)
	sentencia_if : IF '(' . condicion ')' bloque_sentencias ELSE bloque_sentencias END_IF ';'  (86)
	sentencia_if : IF '(' . condicion ')' bloque_sentencias END_IF  (87)
	sentencia_if : IF '(' . condicion ')' bloque_sentencias ELSE bloque_sentencias END_IF  (88)
	sentencia_if : IF '(' . condicion ')' bloque_sentencias error  (89)
	sentencia_if : IF '(' . condicion ')' bloque_sentencias ELSE bloque_sentencias error  (90)
	sentencia_if : IF '(' . condicion error bloque_sentencias END_IF ';'  (92)
	sentencia_if : IF '(' . error ')' bloque_sentencias END_IF ';'  (93)

	error  shift 119
	ID  shift 62
	CTE  shift 63
	TODF  shift 64
	'-'  shift 66
	.  error

	constante  goto 67
	expresion  goto 68
	referencia_atributo  goto 69
	condicion  goto 120
	termino  goto 71
	factor  goto 72
	invocacion_funcion  goto 73
	asignacion_en_expresion  goto 74
	conversion  goto 75


state 66
	constante : '-' . CTE  (132)

	CTE  shift 121
	.  error


state 67
	factor : constante .  (126)

	.  reduce 126


state 68
	condicion : expresion . comparador expresion  (94)

	MAYOR_IGUAL  shift 122
	MENOR_IGUAL  shift 123
	IGUAL_IGUAL  shift 124
	DISTINTO  shift 125
	'>'  shift 126
	'<'  shift 127
	.  error

	comparador  goto 128


state 69
	factor : referencia_atributo .  (128)

	.  reduce 128


state 70
	sentencia_if : IF condicion . ')' bloque_sentencias END_IF ';'  (91)

	')'  shift 129
	.  error


state 71
	expresion : termino . '+' expresion  (114)
	expresion : termino . '-' expresion  (115)
	expresion : termino . '+' error  (116)
	expresion : termino . '-' error  (117)
	expresion : termino . CTE  (118)
	expresion : termino .  (119)

	CTE  shift 130
	'+'  shift 131
	'-'  shift 132
	$end  reduce 119
	error  reduce 119
	ID  reduce 119
	MAYOR_IGUAL  reduce 119
	MENOR_IGUAL  reduce 119
	IGUAL_IGUAL  reduce 119
	DISTINTO  reduce 119
	IF  reduce 119
	ELSE  reduce 119
	END_IF  reduce 119
	END  reduce 119
	POUT  reduce 119
	RET  reduce 119
	REPEAT  reduce 119
	WHILE  reduce 119
	';'  reduce 119
	','  reduce 119
	')'  reduce 119
	'>'  reduce 119
	'<'  reduce 119


state 72
	termino : factor . '*' termino  (120)
	termino : factor . '/' termino  (121)
	termino : factor . '*' error  (122)
	termino : factor . '/' error  (123)
	termino : factor .  (124)

	'*'  shift 133
	'/'  shift 134
	$end  reduce 124
	error  reduce 124
	ID  reduce 124
	CTE  reduce 124
	MAYOR_IGUAL  reduce 124
	MENOR_IGUAL  reduce 124
	IGUAL_IGUAL  reduce 124
	DISTINTO  reduce 124
	IF  reduce 124
	ELSE  reduce 124
	END_IF  reduce 124
	END  reduce 124
	POUT  reduce 124
	RET  reduce 124
	REPEAT  reduce 124
	WHILE  reduce 124
	';'  reduce 124
	','  reduce 124
	')'  reduce 124
	'>'  reduce 124
	'<'  reduce 124
	'+'  reduce 124
	'-'  reduce 124


state 73
	factor : invocacion_funcion .  (127)

	.  reduce 127


state 74
	factor : asignacion_en_expresion .  (129)

	.  reduce 129


state 75
	factor : conversion .  (130)

	.  reduce 130


state 76
	sentencia_pout : POUT '(' . CADENA ')' ';'  (107)
	sentencia_pout : POUT '(' . expresion ')' ';'  (108)
	sentencia_pout : POUT '(' . ')' ';'  (109)
	sentencia_pout : POUT '(' . CADENA ')'  (110)
	sentencia_pout : POUT '(' . expresion ')'  (111)

	ID  shift 62
	CTE  shift 63
	CADENA  shift 135
	TODF  shift 64
	')'  shift 136
	'-'  shift 66
	.  error

	constante  goto 67
	expresion  goto 137
	referencia_atributo  goto 69
	termino  goto 71
	factor  goto 72
	invocacion_funcion  goto 73
	asignacion_en_expresion  goto 74
	conversion  goto 75


state 77
	sentencia_ret : RET '(' . expresion ')' ';'  (112)
	sentencia_ret : RET '(' . expresion ')'  (113)

	ID  shift 62
	CTE  shift 63
	TODF  shift 64
	'-'  shift 66
	.  error

	constante  goto 67
	expresion  goto 138
	referencia_atributo  goto 69
	termino  goto 71
	factor  goto 72
	invocacion_funcion  goto 73
	asignacion_en_expresion  goto 74
	conversion  goto 75


state 78
	sentencia : error . ';'  (79)

	';'  shift 59
	.  error


state 79
	bloque_sentencias : BEGIN . lista_sentencias END  (81)

	error  shift 78
	ID  shift 22
	IF  shift 23
	POUT  shift 25
	RET  shift 26
	REPEAT  shift 27
	.  error

	lista_sentencias  goto 139
	asignacion  goto 29
	sentencia_if  goto 30
	sentencia_repeat_while  goto 31
	sentencia_pout  goto 32
	sentencia_ret  goto 33
	sentencia  goto 34
	referencia_atributo  goto 35


state 80
	sentencia_repeat_while : REPEAT WHILE . '(' condicion ')' ';'  (103)

	'('  shift 140
	.  error


state 81
	bloque_sentencias : sentencia .  (80)

	.  reduce 80


state 82
	sentencia_repeat_while : REPEAT bloque_sentencias . WHILE '(' condicion ')' ';'  (101)
	sentencia_repeat_while : REPEAT bloque_sentencias . WHILE '(' condicion ')'  (102)
	sentencia_repeat_while : REPEAT bloque_sentencias . error ';'  (104)
	sentencia_repeat_while : REPEAT bloque_sentencias . WHILE condicion ')' ';'  (105)
	sentencia_repeat_while : REPEAT bloque_sentencias . WHILE '(' condicion ';'  (106)

	error  shift 141
	WHILE  shift 142
	.  error


state 83
	bloque_ejecutable : BEGIN lista_sentencias END .  (9)

	.  reduce 9


state 84
	sentencia : asignacion ';' .  (73)

	.  reduce 73


state 85
	lista_sentencias : sentencia lista_sentencias .  (71)

	.  reduce 71


state 86
	asignacion : referencia_atributo ASIG . expresion  (83)

	ID  shift 62
	CTE  shift 63
	TODF  shift 64
	'-'  shift 66
	.  error

	constante  goto 67
	expresion  goto 143
	referencia_atributo  goto 69
	termino  goto 71
	factor  goto 72
	invocacion_funcion  goto 73
	asignacion_en_expresion  goto 74
	conversion  goto 75


state 87
	declaracion_typedef : TYPEDEF ID '=' . '[' lista_valores_enumerado ']' ';'  (67)
	declaracion_typedef : TYPEDEF ID '=' . '[' ']' ';'  (68)

	'['  shift 144
	.  error


state 88
	declaracion_objetos : ID lista_variables . ';'  (29)

	';'  shift 145
	.  error


state 89
	programa : nombre_programa sentencias_declarativas bloque_ejecutable .  (1)

	.  reduce 1


state 90
	sentencias_declarativas : sentencia_declarativa sentencias_declarativas .  (15)

	.  reduce 15


state 91
	sentencia_declarativa : asignacion ';' .  (22)

	.  reduce 22


state 92
	programa : declaracion_clara sentencias_declarativas bloque_ejecutable .  (3)

	.  reduce 3


state 93
	declaracion_variables : tipo error ';' .  (28)

	.  reduce 28


state 94
	lista_variables : ID ',' . lista_variables  (34)

	ID  shift 53
	.  error

	lista_variables  goto 146


state 95
	lista_variables : ID lista_variables .  (36)

	.  reduce 36


state 96
	encabezado_funcion : tipo FUNCTION ID .  (37)

	.  reduce 37


state 97
	declaracion_variables : tipo lista_variables ';' .  (27)

	.  reduce 27


state 98
	parametro_formal : ID . ID  (48)
	parametro_formal : ID .  (50)

	ID  shift 147
	','  reduce 50
	')'  reduce 50


state 99
	parametro_formal : tipo . ID  (47)
	parametro_formal : tipo .  (49)

	ID  shift 148
	','  reduce 49
	')'  reduce 49


state 100
	declaracion_funcion : encabezado_funcion '(' lista_parametros_formales . ')' sentencias_declarativas cierre_funcion  (39)

	')'  shift 149
	.  error


state 101
	lista_parametros_formales : parametro_formal . ',' lista_parametros_formales  (45)
	lista_parametros_formales : parametro_formal .  (46)

	','  shift 150
	')'  reduce 46


state 102
	tipo_declarado : ID .  (33)

	.  reduce 33


state 103
	sentencia_extends : EXTENDS . lista_clases_heredadas ';'  (62)
	sentencia_extends : EXTENDS . ';'  (63)
	sentencia_extends : EXTENDS . error ';'  (64)

	error  shift 151
	ID  shift 152
	';'  shift 153
	.  error

	lista_clases_heredadas  goto 154


state 104
	tipo_declarado : tipo .  (32)

	.  reduce 32


state 105
	declaracion_atributo : tipo_declarado . lista_variables ';'  (59)
	encabezado_metodo : tipo_declarado . ID  (60)

	ID  shift 155
	.  error

	lista_variables  goto 156


state 106
	declaracion_clase : encabezado_clase BEGIN cuerpo_clase . END ';'  (52)
	declaracion_clase : encabezado_clase BEGIN cuerpo_clase . END  (53)

	END  shift 157
	.  error


state 107
	cuerpo_clase : miembro_clase . cuerpo_clase  (54)
	cuerpo_clase : .  (55)
